--- a/TP1Pedido/src/main/resources/application.properties
+++ b/TP1Pedido/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.application.name=pedido-service
+spring.application.name=pedido-service-at
 spring.datasource.url=jdbc:mysql://my-sql:3306/AtDevOPS
 spring.datasource.username=sa
 spring.datasource.password=password
